--- a/src/app/callback/callback.page.html
+++ b/src/app/callback/callback.page.html
@@ -11,7 +11,8 @@
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Login Success !!! {{code}}| {{state}}</strong>
-  </div>
+  <ion-item>
+    <ion-spinner color="tertiary"></ion-spinner>
+  </ion-item>
+
 </ion-content>
