--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,20 +9,12 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Dashboard</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-
-    <div *ngIf="isLoggedIn;else elseBlock">
-      <ion-button (click)="onLogout()">Log Out [{{getName()}}]</ion-button>
-    </div>
-
-    <ng-template #elseBlock>
-      <ion-button (click)="onLogin()">Log In</ion-button>
-    </ng-template>
+    <p>Welcome <strong>{{ getName() }}!</strong></p>
+    <ion-button (click)="onLogout()">Log Out</ion-button>
   </div>
 </ion-content>
